--- a/Index.html
+++ b/Index.html
@@ -38,8 +38,8 @@
     </div>
 
 
-    <div class="Video1"><p>Importancia del estres laboral</p></div>
-    <div class="Audio"><p>Reproducir</p></div>
+    <div class="Video1"><h3>Importancia del estres laboral</h3></div>
+    <div class="Audio"><h3>Reproducir</h3></div>
     <div class="Audio1">
         <audio controls>
         <source src="Audio.weba" type="audio/mpeg">
@@ -51,6 +51,24 @@
         </video>
     </div>
     
+
+    <div class="Documentos">
+        <h3>Algunos documentos</h3>
+    </div>
+    <div class="LaSabana">
+        <a href="https://intellectum.unisabana.edu.co/bitstream/handle/10818/1852/131372.pdf?sequence=1&isAllowed=y"><img src="Img/LaSabana.jfif" class="LaSabana" alt="">
+        </a>
+    </div>
+
+    <div class="UNAM">
+        <a href="Img/UNAM.pdf"><img src="Img/UNAM.png" class="UNAM" alt="">
+        </a>
+    </div> 
+
+    <div class="SCIELO">
+        <a href="https://www.scielo.br/j/csc/a/FvHhmJdtL7nDzLwW6tbH76t/?format=html"><img src="Img/SCIELO.png" class="SCIELO" alt="">
+        </a>
+    </div>  
 </body>
-<footer><h3>Alan Giresse Moreno Mijares #214822<br>Jesus Manuel Borrego Miramontes #215197</h3></footer>
+<footer><marquee><h3>Alan Giresse Moreno Mijares #214822<br>Jesus Manuel Borrego Miramontes #215197</h3></marquee></footer>
 </html>
