--- a/SobreN.html
+++ b/SobreN.html
@@ -25,5 +25,41 @@
             </ul>
         </nav>
     </header>
+
+    <div class="card1">
+        <div class="content">
+            <span></span>
+            <div class="img">
+                <img src="Img/Foto2.jfif" alt="">
+            </div>
+            <h4>Alan Giresse Moreno Mijares</h4>
+            <h6>Estudiante de Sistemas Computacionales</h6>
+            <p>Estudiante de la Universidad Autonoma de Ciudad Juarez<br>5to Semestre<br>Gran programador y practicador de futbol</p>
+        </div>
+        <div class="links">
+            <a href="https://www.facebook.com/AlanMijares21"><img src="Img/F.png" class="Iconos" alt="">
+            </a>
+            <a href="https://www.instagram.com/giresse_mijares/"><img src="Img/I.png" class="Iconos" alt="">
+            </a>
+        </div>
+    </div>
+
+    <div class="card2">
+        <div class="content">
+            <span></span>
+            <div class="img">
+                <img src="Img/Foto2.jpg" alt="">
+            </div>
+            <h4>Jesus Manuel Borrego Miramontes</h4>
+            <h6>Estudiante de Sistemas Computacionales</h6>
+            <p>Estudiante de la Universidad Autonoma de Ciudad Juarez<br>5to Semestre<br>Gran programador y apasionado por los videojuegos</p>
+        </div>
+        <div class="links">
+            <a href="https://www.facebook.com/jesusmanuel.borregomiramontes"><img src="Img/F.png" class="Iconos" alt="">
+            </a>
+            <a href="https://www.instagram.com/jesusb57/"><img src="Img/I.png" class="Iconos" alt="">
+            </a>
+        </div>
+    </div>
 </body>
 </html>
