--- a/Index.html
+++ b/Index.html
@@ -27,10 +27,10 @@
         </ul>
     </nav>
     </header>
-    <h2>Un poco sobre el programa</h2>
+   
     <div id="contenedor">
         <canvas id="lienzo" width="1280" height="720">Tu navegador no soporta la api de canvas, asegurate de que tu navegador este actualizado o que soporte html5.</canvas></div>
-    <h2>Carrusel</h2>
+        <h2>Un poco sobre la empresa</h2>
 
     <div class="slider-frame">
         <ul>
