--- a/Index.html
+++ b/Index.html
@@ -47,7 +47,7 @@
     <div class="Audio"><h3>Reproducir</h3></div>
     <div class="Audio1">
         <audio controls>
-        <source src="Audio.weba" type="audio/mpeg">
+        <source src="Audio.wav" type="audio/mpeg">
         </audio>
     </div>
     <div class="Video">
